--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "rsbuild build",
-    "dev": "rsbuild dev --open",
+    "buidd:exposes": "node build/build-exposes.mjs",
+    "build": "pnpm buidd:exposes && rsbuild build",
+    "dev": "pnpm buidd:exposes && rsbuild dev --open",
     "format": "prettier --write .",
     "lint": "eslint .",
     "preview": "rsbuild preview"
@@ -18,9 +19,12 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@rsbuild/core": "^1.2.4",
+    "@rsbuild/plugin-sass": "^1.2.1",
     "@rsbuild/plugin-vue": "^1.0.5",
     "@types/ali-oss": "^6.16.11",
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "^22.13.4",
+    "compression-webpack-plugin": "^11.1.0",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
