--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "buidd:exposes": "node build/build-exposes.mjs",
-    "build": "pnpm buidd:exposes && rsbuild build",
+    "build": "rsbuild build",
     "dev": "pnpm buidd:exposes && rsbuild dev --open",
     "format": "prettier --write .",
     "lint": "eslint .",
